--- a/VERSION 1.0.1
+++ b/VERSION 1.0.1
@@ -1,5 +1,5 @@
-### createShaderPlugin can now be called before or after creating the renderer/app
+- createShaderPlugin can now be called before or after creating the renderer/app
 - Simply pass renderer as the final argument if it has already been created.
 
-### createShaderPluginSprite helper function added
+- createShaderPluginSprite helper function added
 - var sprite = createShaderPluginSprite(name, size, uniforms);
